--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -4,7 +4,7 @@
   min-height: 92.5vh;
   overflow: auto;
   .about-content {
-    color: vars.$mainColor;
+    color: white;
     background-color: black;
     width: 40%;
     padding: 2%;
