--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -2,7 +2,7 @@
 
 .contact {
   min-height: 92.5vh;
-  color: vars.$mainColor;
+  color: white;
   .contact-container{
     border-radius: 2px;
     position: absolute;
